feat: add two new pages

--- a/avtoramka.by/assets/mobirise-icons/mbr-additional.css
+++ b/avtoramka.by/assets/mobirise-icons/mbr-additional.css
@@ -487,3 +487,9 @@ a:hover,
 .mbr-gallery-filter li:hover {
   color: #0dba26;
 }
+#text1-l H3 {
+  color: #ffffff;
+}
+#text1-l P {
+  color: #ffffff;
+}
